# python-mommy-venv

./: README.md  generate  meow.py  pyproject.toml
.github/workflows/: python-publish.yml
daddy/: __main__.py
mommy/: __main__.py
python_mommy/: __init__.py  __main__.py  legacy_mommify.py  static.py
python_mommy/mommify/: __init__.py  legacy.py  mommify_shell.py  source.py  utils.py
python_mommy/programs/: patch.py
python_mommy_venv/: __init__.py  __main__.py  config.py  responses.json  responses.py  static.py
python_mommy_venv/config/: __init__.py  structure.py  utils.py
tests/: test_daddy.py
